# lqh

./: .gitignore  BASE_VS_INSTRUCT.md  TUI_LIFECYCLE.md  copy_to_toka.sh  pyproject.toml  test_all.sh
lqh/: __init__.py  agent.py  artifacts.py  config.py  engine.py  env_secrets.py  golden.py  scoring.py  subprocess_manager.py  sync.py  watcher.py
lqh/infer/: __main__.py
lqh/remote/: bundle.py  cloud.py  compute.py  merge_lora.py  publish.py  ssh_direct.py
lqh/skills/auto/: SKILL.md
lqh/skills/data_generation/: SKILL.md
lqh/skills/evaluation/: SKILL.md
lqh/skills/train/: SKILL.md
lqh/tools/: definitions.py  handlers.py
lqh/train/: calibrate.py  cloud_score.py  data_utils.py  dpo.py  load_model.py  progress.py  resume.py  sft.py  sweep.py
lqh/tui/: app.py  commands.py  renderer.py
tests/: test_artifacts.py  test_calibrate.py  test_cloud_backend.py  test_compute_resolve.py  test_deployment_handlers.py  test_load_model.py  test_multi_source.py  test_progress_sentinel.py  test_remote_publish.py  test_secret_delivery.py  test_sweep_eval_of_best.py  test_training.py  test_tui_lifecycle.py  test_tui_prompt_session.py
tests/benchmarks/base_vs_instruct/: README.md  __init__.py  eval_local.py  report.py  run.py  tasks.py
tests/benchmarks/base_vs_instruct/pipelines/: __init__.py  classification.py  extraction.py  (+3 more)
tests/e2e/: harness.py  scenarios.py  test_cloud_finetune_agent_e2e.py  test_cloud_sft_hf_e2e.py  test_cloud_sft_smoke.py  test_datagen_and_eval.py  test_datagen_and_eval_tools.py  test_full_pipeline.py  test_full_pipeline_tools.py  test_spec_and_datagen.py  test_spec_and_datagen_tools.py  test_spec_only.py  test_spec_only_tools.py  test_translation.py
tests/e2e/benchmark/: runner.py
tests/e2e/reports/: datagen_and_eval_tools_helpdesk_orchestration_2_20260603_152435.json  datagen_and_eval_tools_helpdesk_orchestration_2_20260603_152435.md  datagen_and_eval_translation_orchestration_2_20260603_142331.json  datagen_and_eval_translation_orchestration_2_20260603_142331.md  spec_and_datagen_sentiment_orchestration_2_20260603_194349.json  spec_and_datagen_sentiment_orchestration_2_20260603_194349.md  translation_eval_promptopt_orchestration_3_20260603_152920.json  translation_eval_promptopt_orchestration_3_20260603_152920.md
