[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lqh"
version = "0.3.2"
description = "Liquid Harness – customize Liquid AI foundation models into task-specific models."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Liquid AI", email = "hello@liquid.ai" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "openai>=1.0",
    "httpx>=0.27",
    "liquidrandom",
    "datasets",
    "huggingface_hub>=0.20",
    "pyarrow",
]

[project.optional-dependencies]
train = [
    "torch",
    "transformers>=5.0,<6",
    "trl>=1.0",
    "peft>=0.15",
    # Constrained JSON-schema decoding for local eval; integrates with HF
    # transformers via prefix_allowed_tokens_fn. Pure Python, small.
    # NOTE: lm-format-enforcer ≤0.11.3 ships a broken transformers shim that
    # imports ``PreTrainedTokenizerBase`` from the v4 path. We work around it
    # in ``lqh/infer/__main__.py`` so any version compatible with v5 works.
    "lm-format-enforcer>=0.11",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
xfail_strict = true
markers = [
    "integration: tests that hit api.lqh.ai (require LQH_DEBUG_API_KEY or ~/.lqh/config.json)",
    "gpu: tests that require a CUDA GPU and optional [train] deps",
    "remote: tests that require a reachable SSH host (--remote-host)",
    "slow: long-running tests",
]

[project.urls]
Homepage = "https://liquid.ai"

[project.scripts]
lqh = "lqh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lqh"]

# Scope the sdist to the package so untracked working-tree dirs (local
# projects, scratch data) are never swept into the tarball — some contain
# absolute symlinks that break the build. pyproject.toml and the README are
# always included by hatchling for metadata.
[tool.hatch.build.targets.sdist]
only-include = ["lqh", "README.md"]
